Erro.txt
🌠 Danny-Chat 🌐#6916 está online
undefined:3
        "123456789012345678": [  // ID do servidor
                                 ^

SyntaxError: Unexpected token '/', ..."5678": [  // ID do s"... is not valid JSON
    at JSON.parse (<anonymous>)
    at loadConnections (file:///storage/emulated/0/documents/dannybot/index.js:31:33)
    at Client.<anonymous> (file:///storage/emulated/0/documents/dannybot/index.js:189:5)
    at Object.onceWrapper (node:events:635:26)
    at Client.emit (node:events:520:28)
    at WebSocketManager.triggerClientReady (/storage/emulated/0/documents/dannybot/node_modules/discord.js/src/client/websocket/WebSocketManager.js:381:17)
    at WebSocketManager.checkShardsReady (/storage/emulated/0/documents/dannybot/node_modules/discord.js/src/client/websocket/WebSocketManager.js:364:10)
    at WebSocketShard.<anonymous> (/storage/emulated/0/documents/dannybot/node_modules/discord.js/src/client/websocket/WebSocketManager.js:194:16)
    at WebSocketShard.emit (node:events:520:28)
    at WebSocketShard.checkReady (/storage/emulated/0/documents/dannybot/node_modules/discord.js/src/client/websocket/WebSocketShard.js:184:12)

Node.js v22.8.0
